# transparencia

./: .base_commit  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  Dockerfile  Makefile  README.md  config.py  conftest.py  constants.py  db.py  docker-compose.yml  glossary.py  main.py  models.py  pipeline.py  pyproject.toml  scraper.py
.github/workflows/: ci.yml  keep-alive.yml
.streamlit/: secrets.toml.example
analysis/: adesao_de_ata.py  analise_despesas.py  anomalias_contratuais.py  bidding_gaps.py  budget_execution.py  caprem_story.py  comparacao.py  comparison.py  concentracao_fornecedores.py  constants.py  contract_anomalies.py  contratos.py  execucao_orcamentaria.py  expenses_analysis.py  fiscal_position.py  folha_vs_servicos.py  fontes_receita.py  functional_budget.py  health_story.py  historia_caprem.py  historia_saude.py  licitacao_gaps.py  orcamento_funcional.py  payroll_vs_services.py  posicao_fiscal.py  revenue_sources.py  supplier_concentration.py  tendencias_anuais.py  yoy_trends.py
app/: glossary.py
dashboard/: app.py  shared.py
elt/load/: run.py
extractors/: base.py  extractors.py  receitas_csv_extractor.py
migrations/: env.py  grant_readonly.sql
portals/: porciuncula_prefeitura.yml
report/: caprem.py  caprem_pdf.py  caprem_template.html  compare.py  compare_template.html  generate.py  saude.py  saude_pdf.py  saude_template.html  template.html
scripts/: run_dbt.py
tests/: conftest.py  test_db.py  test_generate.py  test_masking.py  test_pipeline.py  test_saude_pdf.py  test_scraper.py
utils/: masking.py
(+159 files in other folders)
