[project]
name = "transparencia"
version = "0.11.4"
description = "Transparência fiscal e gestão orçamentária"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "streamlit>=1.35.0",
    "matplotlib>=3.9.0",
    "pytest>=8.2.0",
    "plotly>=6.8.0",
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "fpdf2>=2.7",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
    "vulture>=2.11",
    "ruff>=0.15.18",
    "testing-postgresql>=1.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120
[tool.ruff.lint]
select = ["E", "W", "F", "I", "ARG"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.vulture]
exclude = ["*__tests__*", "*/tests/*", "*/fixtures/*", "*conftest.py"]
